src/objects/Case_Assignment__c.object
<CustomObject>
    <description>Allows a user to assign an action to a queue to be completed.</description>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Associate_Name__c</fullName>
        <formula>rs_case__r.Contact.FirstName+&quot; &quot;+ rs_case__r.Contact.LastName</formula>
        <inlineHelpText>Associate&apos;s Name</inlineHelpText>
        <label>Associate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Number__c</fullName>
        <formula>rs_case__r.Contact.Associate_Number__c</formula>
        <label>Associate Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Referring_Client__c</fullName>
        <formula>rs_case__r.Contact.Referring_Client__r.Name</formula>
        <inlineHelpText>The client that referred the reporter</inlineHelpText>
        <label>Associate Referring Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Service__c</fullName>
        <formula>TEXT(rs_case__r.Contact.Associate_Type__c)</formula>
        <inlineHelpText>The reporter&apos;s associate service</inlineHelpText>
        <label>Associate Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Due_Date__c</fullName>
        <formula>rs_case__r.fd_due__c</formula>
        <inlineHelpText>The date the customer needs the issue resolved by.</inlineHelpText>
        <label>Case Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <formula>Text(rs_case__r.Priority)</formula>
        <inlineHelpText>The priority the customer believes the case is.</inlineHelpText>
        <label>Case Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Task_SLA__c</fullName>
        <formula>IF(NOT(ISPICKVAL(fs_status__c,&quot;Completed&quot;)),
   IF(OR(Due_Date__c - TODAY() &gt; 0,
         ISBLANK(Due_Date__c)
         ),
      IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000002Mh3c&quot;, &quot;Green&quot;),
      IF(AND(Due_Date__c - TODAY() &lt;= 0,
             Due_Date__c - TODAY() &gt; -1
             ),
         IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000002Mh3e&quot;, &quot;Yellow&quot;),
         IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000002Mh3d&quot;, &quot;Red&quot;)
         )
      ),
   IF(OR(DATEVALUE(Closed_Date__c) &lt; Due_Date__c,
         ISBLANK(Due_Date__c)
         ),
      IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000002Mh3c&quot;, &quot;Green&quot;),
      IF(DATEVALUE(Closed_Date__c) = Due_Date__c,
         IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000002Mh3e&quot;, &quot;Yellow&quot;),
         IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000002Mh3d&quot;, &quot;Red&quot;)
         )
      )
  )</formula>
        <label>Case Task SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <defaultValue>If(
   NOW() &gt; DATETIMEVALUE(
                         DATE(
                              YEAR(TODAY()),
                              MONTH(TODAY()),
                              DAY(TODAY())
                              )
                          )+0.8333333,
   TODAY()+1,
   TODAY()
   )</defaultValue>
        <inlineHelpText>The date this request needs to be complete by in order to complete the related case in time.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>(Closed_Date__c-Assigned_Date__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ctPriority__c</fullName>
        <label>Case Task Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_description__c</fullName>
        <inlineHelpText>Additional information the task worker needs to complete the task.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fs_resolution__c</fullName>
        <inlineHelpText>Notes provided to case worker upon task completion.</inlineHelpText>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fs_status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_topic__c</fullName>
        <inlineHelpText>The type of task requested for completion. Will send task to the associated queue, based on the Topic.</inlineHelpText>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Push Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unauthorize Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Memo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve Negative Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied Expense Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apply Negative Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverse Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upload W-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garnishment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Payment Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ledger Insurance Premiums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Wire Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ledger Pay Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Fee Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit/Badge Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Clearance/DD-254</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Fidelity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminate/Backdate Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>401K Inquiry/Return of Excess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims - WC, Life, LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Verify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence of Insurability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent Tech Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rs_case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Case Task</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Case Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Completed_Resolution</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(fs_status__c,&quot;Completed&quot;) &amp;&amp; fs_resolution__c=NULL</errorConditionFormula>
        <errorDisplayField>fs_resolution__c</errorDisplayField>
        <errorMessage>Please enter a resolution upon completion of the assignment</errorMessage>
    </validationRules>
</CustomObject>